<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_LedColor" Id="{ad0e60a5-ec28-4c7c-865d-4eb05755c1a3}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_LedColor :
(
	Red,
	Green,
	Blue,
	Yellow,
	Cyan,
	Purple,
	White,
	Black
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>